# ehestifter

./: .gitignore  README.md
.github/workflows/: deploy_core_web_app.yml  deploy_enrichers_with_oryx.yml  deploy_gateway_to_GCP.yml  deploy_gateway_with_oryx.yml  deploy_jobs_with_oryx.yml  deploy_telegram_bot_app.yml  deploy_users_with_oryx.yml  main_ehestifter-enrichers.yml  main_ehestifter-jobs.yml  main_ehestifter-users.yml  main_ehestifter.yml  main_ehestiftercrud.yml  storing-cv-blobs_ehestifter-gateway.yml
backend/analytics/: .dockerignore  .env.local.example  .env.test.example  Dockerfile  pytest.ini  requirements.txt
backend/core/: app.py  requirements.txt
backend/enrichers/: function_app.py  requirements.txt
backend/gateway/: .dockerignore  Dockerfile.cloudrun  function_app.py  host.json  main.py  requirements.txt
backend/job_api/: .funcignore  __init__.py  delete_job.py  function_app.py  get_job.py  list_jobs.py  post_job.py  update_job.py
backend/jobs/: auth.py  domain_constants.py  history.py  (+4 more)
docs/: adzuna-import-milestone.md  enrichment-system-design.md  milestone_local_agentic_engineering_sandbox.md  milestone_mixpanel_owned_analytics.md  milestone_using_gcp_for_gateway.md  milestone_vendor_agnostic_job_import.md  system-design.md
scrapers/adzuna-poc/: .env.example  README.md  pyproject.toml
scrapers/adzuna-poc/src/adzuna_poc/: adzuna_client.py  canonical_identity.py  cli.py  config.py  http.py  models.py  normalize.py  poc.py  resolve.py
scrapers/adzuna-poc/tests/: test_canonical_identity.py  test_normalize.py
tools/: build_geo_json.py
(+292 files in other folders)
