[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adzuna-poc"
version = "0.1.0"
description = "Phase 1 PoC for Adzuna-backed automatic job sourcing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI" }]
dependencies = [
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
adzuna-poc = "adzuna_poc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
