[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adzuna-poc"
version = "0.2.0"
description = "Local Adzuna PoC for Ehestifter"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "playwright>=1.52.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
adzuna-poc = "adzuna_poc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]